--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "dev": "nodemon src/index"
   },
   "dependencies": {
+    "@graphql-tools/schema": "^7.1.5",
     "apollo-datasource-rest": "^0.11.0",
-    "apollo-server": "^3.0.0",
-    "graphql": "^15.5.1"
+    "apollo-server-core": "^3.5.0",
+    "apollo-server-express": "^3.5.0",
+    "express": "^4.17.1",
+    "graphql": "^15.8.0",
+    "graphql-subscriptions": "^2.0.0",
+    "subscriptions-transport-ws": "^0.11.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
