--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "apollo-server-express": "^3.5.0",
     "express": "^4.17.1",
     "graphql": "^15.8.0",
+    "graphql-redis-subscriptions": "^2.4.2",
     "graphql-subscriptions": "^2.0.0",
+    "ioredis": "^4.28.2",
     "subscriptions-transport-ws": "^0.11.0"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "nodemon": "^2.0.4"
   },
   "author": "Raphael Terrier @R4ph-t",
